// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Circle 1`] = `
<button
  className="py-2 px-4 text-md bg-primary-500 text-white hover:bg-primary-700 active:bg-primary-800 dark:bg-primary-400 dark:hover:bg-primary-300 dark:hover:bg-primary-200 rounded-full rounded leading-none box-border transition-colors transition-shadow duration-75 ease-out font-medium focus:ring focus:ring-primary-300 focus:outline-none dark:focus:ring-primary-700"
>
  hello
</button>
`;

exports[`Storyshots Button Link 1`] = `
<button
  className="py-2 px-4 text-md text-coolGray-700 dark:text-trueGray-300 hover:underline rounded rounded leading-none box-border transition-colors transition-shadow duration-75 ease-out font-medium focus:ring focus:ring-primary-300 focus:outline-none dark:focus:ring-primary-700"
>
  hello
</button>
`;

exports[`Storyshots Button Primary Large 1`] = `
<button
  className="py-3 px-5 text-lg bg-primary-500 text-white hover:bg-primary-700 active:bg-primary-800 dark:bg-primary-400 dark:hover:bg-primary-300 dark:hover:bg-primary-200 rounded rounded leading-none box-border transition-colors transition-shadow duration-75 ease-out font-medium focus:ring focus:ring-primary-300 focus:outline-none dark:focus:ring-primary-700"
>
  hello
</button>
`;

exports[`Storyshots Button Primary Medium 1`] = `
<button
  className="py-2 px-4 text-md bg-primary-500 text-white hover:bg-primary-700 active:bg-primary-800 dark:bg-primary-400 dark:hover:bg-primary-300 dark:hover:bg-primary-200 rounded rounded leading-none box-border transition-colors transition-shadow duration-75 ease-out font-medium focus:ring focus:ring-primary-300 focus:outline-none dark:focus:ring-primary-700"
>
  hello
</button>
`;

exports[`Storyshots Button Primary Small 1`] = `
<button
  className="py-1.5 px-2 text-sm bg-primary-500 text-white hover:bg-primary-700 active:bg-primary-800 dark:bg-primary-400 dark:hover:bg-primary-300 dark:hover:bg-primary-200 rounded rounded leading-none box-border transition-colors transition-shadow duration-75 ease-out font-medium focus:ring focus:ring-primary-300 focus:outline-none dark:focus:ring-primary-700"
>
  hello
</button>
`;

exports[`Storyshots Button Secondary Large 1`] = `
<button
  className="py-2 px-4 text-md text-primary-500 bg-primary-100 hover:bg-primary-200 active:bg-primary-300 dark:text-primary-400 dark:bg-primary-900 dark:hover:bg-primary-800 dark:active:bg-primary-700 rounded rounded leading-none box-border transition-colors transition-shadow duration-75 ease-out font-medium focus:ring focus:ring-primary-300 focus:outline-none dark:focus:ring-primary-700"
>
  hello
</button>
`;

exports[`Storyshots Button Tiny Letter 1`] = `
<button
  className="py-1.5 px-2 text-sm bg-primary-500 text-white hover:bg-primary-700 active:bg-primary-800 dark:bg-primary-400 dark:hover:bg-primary-300 dark:hover:bg-primary-200 rounded-full rounded leading-none box-border transition-colors transition-shadow duration-75 ease-out font-medium focus:ring focus:ring-primary-300 focus:outline-none dark:focus:ring-primary-700"
>
  a
</button>
`;

exports[`Storyshots Button Wash Large 1`] = `
<button
  className="py-2 px-4 text-md text-coolGray-700 bg-coolGray-100 hover:bg-coolGray-200 active:bg-coolGray-300 dark:text-trueGray-300 dark:bg-trueGray-900 dark:hover:bg-trueGray-800 dark:active:bg-trueGray-700 rounded rounded leading-none box-border transition-colors transition-shadow duration-75 ease-out font-medium focus:ring focus:ring-primary-300 focus:outline-none dark:focus:ring-primary-700"
>
  hello
</button>
`;
